Add bootstrap styles

--- a/pythonsd/jinja2/base.html
+++ b/pythonsd/jinja2/base.html
@@ -4,6 +4,7 @@
 <head>
 
   <title>{% block title %}{% endblock %}</title>
+  <link rel="stylesheet" href="{{ static('css/pythonsd.css') }}">
 
 </head>
 
