--- a/pythonsd/jinja2/base.html
+++ b/pythonsd/jinja2/base.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{{ static('css/pythonsd.css') }}">
+  </head>
 
-  <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="{{ static('css/pythonsd.css') }}">
-
-</head>
-
-<body>
-
-  {% block content %}{% endblock %}
-
-</body>
+  <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">SDPUG</a>
+        </div>
+      </div>
+    </nav>
+    <div class="container theme-showcase" role="main">
+      {% block content %}{% endblock %}
+    </div>
+  </body>
 
 </html>
