--- a/pythonsd/jinja2/base.html
+++ b/pythonsd/jinja2/base.html
@@ -20,6 +20,9 @@
     <div class="container theme-showcase" role="main">
       {% block content %}{% endblock %}
     </div>
+    {% block js %}
+      <script src="{{ static('js/vendor/jquery/jquery-1.11.2.min.js') }}"></script>
+    {% endblock %}
   </body>
 
 </html>
