--- a/pythonsd/jinja2/base.html
+++ b/pythonsd/jinja2/base.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#"><img src="{{ static('img/pythonsd-logo.png') }}"> SD Python User Group</a>
+          <a class="navbar-brand" href="{{ url('home') }}"><img src="{{ static('img/pythonsd-logo.png') }}"> SD Python User Group</a>
         </div>
       </div>
     </nav>
