--- a/pythonsd/jinja2/404.html
+++ b/pythonsd/jinja2/404.html
@@ -6,6 +6,6 @@
 
   <h1>That page doesn't exist!</h1>
 
-  <p>You can <a href="#">return to our homepage</a> and see if it might exist elsewhere.</p>
+  <p>You can <a href="{{ url('home') }}">return to our homepage</a> and see if it might exist elsewhere.</p>
 
 {% endblock content %}
