--- a/pythonsd/jinja2/base.html
+++ b/pythonsd/jinja2/base.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
+
+    <link rel="shortcut icon" href="{{ static('img/favicon.ico') }}" />
+    <link rel="apple-touch-icon" href="{{ static('img/apple-touch-icon.png') }}">
     <link rel="stylesheet" href="{{ static('css/pythonsd.css') }}">
   </head>
 
