--- a/pythonsd/jinja2/base.html
+++ b/pythonsd/jinja2/base.html
@@ -23,12 +23,18 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="{{ url('home') }}"><img src="{{ static('img/pythonsd-logo.png') }}"> SD Python User Group</a>
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            {{ nav_link('chat-room', 'Chat Room') }}
-            {{ nav_link('code-of-conduct', 'Code of Conduct') }}
-          </ul>
-        </div>
+        <ul class="nav navbar-nav">
+          {{ nav_link('chat-room', 'Chat Room') }}
+          {{ nav_link('code-of-conduct', 'Code of Conduct') }}
+          {{ nav_link('getting-started', 'Getting Started') }}
+          {{ nav_link('job-posting', 'Job Posting Guidelines') }}
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="https://github.com/pythonsd">GitHub</a></li>
+          <li><a href="https://groups.google.com/forum/#!forum/pythonsd">Google Groups</a></li>
+          <li><a href="http://www.meetup.com/pythonsd/">Meetup</a></li>
+          <li><a href="https://twitter.com/sandiegopython">Twitter</a></li>
+        </ul>
       </div>
     </nav>
     <div class="container theme-showcase" role="main">
